# datalized.github.io

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  observablehq.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  share.md
.github/workflows/: deploy.yml
data/: new_schools_list.json
docs/: migrate-webapp.md  observable.md  paes.md
notebooks/: paes_db.ipynb
notebooks/paes-2026/: raw-data.ipynb
src/: crema.md  custom.css  ficha.md  index-styles.css  index.md  top.md
src/components/: tailwind.js
src/data/: escuelas-ranking.json.py  filtros.json.py
src/paes-2026/: ficha.md  index.md  metodologia.md  ranking.md  styles.css  top.md
src/paes-2026/components/: constants.js  plotFigure.js  scoreDistribution.js  statCard.js  tableFormatters.js
src/paes-2026/data/: brechas-top10.json.py  escuelas-ranking.json.py  estudiantes-distribucion.json.py  filtros.json.py  overview.json.py
