[project]
name = "paes2026"
version = "0.1.0"
description = "Explorador de datos PAES 2026 - Análisis de resultados de la Prueba de Acceso a la Educación Superior de Chile"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.3",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "streamlit>=1.52.2",
    "streamlit-searchbox>=0.1.24",
]
